UPD IMGS with webp

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>You Win !</h1>
         <h2>Gulpfile's Test </h2>
      <div class="picture">
-        <img src = "assets/images/jpg/test.jpg" alt="SVG plumber img test"/>
+        <img src = "assets/images/test.webp" alt="SVG plumber img test"/>
      </div> 
         <!-- Codez toujours comme si le gars qui finira par maintenir votre code était un psychopathe violent qui sait où vous vivez.- John Woods (?)-->
         <p><span class="quote">«</span> Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live. <span class="quote">»</span> <br><span class="quote">John Woods</span> </p>
